--- a/index.html
+++ b/index.html
@@ -14,31 +14,35 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a class="link-logo" href="./index.html">Web<span class="link-logo2">Studio</span></a>
-            <ul class="navigation">
-                <li>
-                    <a class="link" href="./index.html">Studio</a>
-                </li>
-                <li>
-                    <a class="link" href="">Portfolio</a>
-                </li>
-                <li>
-                    <a class="link" href="">Contacts</a>
-                </li>
-            </ul>
-        </nav>
-        <address class="contacts">
-            <ul>
-                <li>
-                    <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
-        </address>
+    <header class="page-header">
+        <div class="container">
+            <nav class="logo-nav">
+                <a class="link-logo" href="./index.html">Web<span class="link-logo2">Studio</span></a>
+                <ul class="navigation">
+                    <li>
+                        <a class="link" href="./index.html">Studio</a>
+                    </li>
+                    <li>
+                        <a class="link" href="">Portfolio</a>
+                    </li>
+                    <li>
+                        <a class="link" href="">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+
+            <address class="contacts">
+                <ul class="nav-contacts">
+                    <li>
+                        <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
+        
     </header>
 
     <main>
@@ -50,24 +54,26 @@
 
         <section class="section2">
             <h2 class="section-title">Perevagu</h2>
-            <ul class="perevagu-list">
-                <li>
-                    <h3 class="under-section-title">Strategy</h3>
-                    <p class="under-section-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
-                </li>
-                <li>
-                    <h3 class="under-section-title">Punctuality</h3>
-                    <p class="under-section-text">Bring the key message to the brand's audience for the best price within the shortest  possible time.</p>
-                </li>
-                <li>
-                    <h3 class="under-section-title">Diligence</h3>
-                    <p class="under-section-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-                </li>
-                <li>
-                    <h3 class="under-section-title">Technologies</h3>
-                    <p class="under-section-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-                </li>
-            </ul>
+            <div class="container">
+                <ul class="perevagu-list">
+                    <li>
+                        <h3 class="under-section-title">Strategy</h3>
+                        <p class="under-section-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                    </li>
+                    <li>
+                        <h3 class="under-section-title">Punctuality</h3>
+                        <p class="under-section-text">Bring the key message to the brand's audience for the best price within the shortest  possible time.</p>
+                    </li>
+                    <li>
+                        <h3 class="under-section-title">Diligence</h3>
+                        <p class="under-section-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                    </li>
+                    <li>
+                        <h3 class="under-section-title">Technologies</h3>
+                        <p class="under-section-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    </li>
+                </ul>
+            </div>
         </section>
         
 
