--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
 
     <main>
         <section class="main-page">
-            <h1 class="main-title">Effective Solutions for Your Business</h1>
+            <div class="container">
+                <h1 class="main-title">Effective Solutions for Your Business</h1>
             <button class="button" type="button">Order Service</button>
+            </div>
         </section>
         
 
         <section class="section-perevag">
             <div class="container">
-                <h2 class="section-title">Perevagu</h2>
-            </div>
-            <div class="container">
+                <span class="visually-hidden">Perevagu</span>
                 <ul class="perevagu-list">
                     <li>
                         <h3 class="under-section-title">Strategy</h3>
@@ -79,8 +79,8 @@
         
 
         <section class="section-team">
-            <h2 class="section-title">Our Team</h2>
-            <div class="container">
+            <div class="container"></div>
+                <h2 class="section-title">Our Team</h2>
                 <ul class="team-list">
                     <li class="team">
                         <img src="./images/foto_product.jpg" height="260" width="264" alt="product">
