--- a/index.html
+++ b/index.html
@@ -79,28 +79,36 @@
         
 
         <section class="section-team">
-            <div class="container"></div>
+            <div class="container">
                 <h2 class="section-title">Our Team</h2>
                 <ul class="team-list">
                     <li class="team">
                         <img src="./images/foto_product.jpg" height="260" width="264" alt="product">
-                        <h3 class="under-section-title">Mark Guerrero</h3>
-                        <p class="under-section-text">Product Designer</p>
+                        <div class="team1">
+                            <h3 class="under-section-title">Mark Guerrero</h3>
+                            <p class="under-section-text">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team">
                         <img src="./images/foto_developer.jpg" height="260" width="264" alt="developer">
-                        <h3 class="under-section-title">Tom Ford</h3>
-                        <p class="under-section-text">Frontend Developer</p>
+                        <div class="team1">
+                            <h3 class="under-section-title">Tom Ford</h3>
+                            <p class="under-section-text">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team">
                         <img src="./images/foto_marketing.jpg" height="260" width="264" alt="marketing">
-                        <h3 class="under-section-title">Camila Garcia</h3>
-                        <p class="under-section-text">Marketing</p>
+                        <div class="team1">
+                            <h3 class="under-section-title">Camila Garcia</h3>
+                            <p class="under-section-text">Marketing</p>
+                        </div>
                     </li>
                     <li class="team">
                         <img src="./images/foto_designer.jpg" height="260" width="264" alt="designer">
-                        <h3 class="under-section-title">Daniel Wilson</h3>
-                        <p class="under-section-text">UI Designer</p>
+                        <div class="team1">
+                            <h3 class="under-section-title">Daniel Wilson</h3>
+                            <p class="under-section-text">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -109,8 +117,6 @@
         <section class="section-portfolio">
             <div class="container">
                 <h2 class="section-title">Our Portfolio</h2>
-            </div>
-            <div class="container">
                 <ul class="portfolio-list">
                     <li class="port-setvice">
                         <img src="./images/port-bank.jpg" height="300" width="360" alt="bank-app">
