--- a/index.html
+++ b/index.html
@@ -48,28 +48,28 @@
         <section class="main-page">
             <div class="container">
                 <h1 class="main-title">Effective Solutions for Your Business</h1>
-            <button class="button" type="button">Order Service</button>
+                <button class="button" type="button">Order Service</button>
             </div>
         </section>
         
 
         <section class="section-perevag">
             <div class="container">
-                <span class="visually-hidden">Perevagu</span>
+                <h2 class="visually-hidden">Perevagu</h2>
                 <ul class="perevagu-list">
-                    <li>
+                    <li class="perevag-element">
                         <h3 class="under-section-title">Strategy</h3>
                         <p class="under-section-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                     </li>
-                    <li>
+                    <li class="perevag-element">
                         <h3 class="under-section-title">Punctuality</h3>
                         <p class="under-section-text">Bring the key message to the brand's audience for the best price within the shortest  possible time.</p>
                     </li>
-                    <li>
+                    <li class="perevag-element">
                         <h3 class="under-section-title">Diligence</h3>
                         <p class="under-section-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                     </li>
-                    <li>
+                    <li class="perevag-element">
                         <h3 class="under-section-title">Technologies</h3>
                         <p class="under-section-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                     </li>
@@ -84,28 +84,28 @@
                 <ul class="team-list">
                     <li class="team">
                         <img src="./images/foto_product.jpg" height="260" width="264" alt="product">
-                        <div class="team1">
+                        <div class="team-element">
                             <h3 class="under-section-title">Mark Guerrero</h3>
                             <p class="under-section-text">Product Designer</p>
                         </div>
                     </li>
                     <li class="team">
                         <img src="./images/foto_developer.jpg" height="260" width="264" alt="developer">
-                        <div class="team1">
+                        <div class="team-element">
                             <h3 class="under-section-title">Tom Ford</h3>
                             <p class="under-section-text">Frontend Developer</p>
                         </div>
                     </li>
                     <li class="team">
                         <img src="./images/foto_marketing.jpg" height="260" width="264" alt="marketing">
-                        <div class="team1">
+                        <div class="team-element">
                             <h3 class="under-section-title">Camila Garcia</h3>
                             <p class="under-section-text">Marketing</p>
                         </div>
                     </li>
                     <li class="team">
                         <img src="./images/foto_designer.jpg" height="260" width="264" alt="designer">
-                        <div class="team1">
+                        <div class="team-element">
                             <h3 class="under-section-title">Daniel Wilson</h3>
                             <p class="under-section-text">UI Designer</p>
                         </div>
