--- a/index.html
+++ b/index.html
@@ -120,42 +120,42 @@
                 <ul class="portfolio-list">
                     <li class="port-service">
                         <img src="./images/port-bank.jpg" height="300" width="360" alt="bank-app">
-                        <div class="port-service1">
+                        <div class="port-service-element">
                             <h3 class="under-section-title">Banking App</h3>
                             <p class="under-section-text">App</p>
                         </div>
                     </li>
                     <li class="port-service">
                         <img src="./images/port-payment.jpg" height="300" width="360" alt="cash-marketing ">
-                        <div class="port-service1">
+                        <div class="port-service-element">
                             <h3 class="under-section-title">Cashless Payment</h3>
                             <p class="under-section-text">Marketing</p>
                         </div>
                     </li>
                     <li class="port-service">
                         <img src="./images/port-meditation.jpg" height="300" width="360" alt="medit-app">
-                        <div class="port-service1">
+                        <div class="port-service-element">
                             <h3 class="under-section-title">Meditation App</h3>
                             <p class="under-section-text">App</p>
                         </div>
                     </li>
                     <li class="port-service">
                         <img src="./images/port-taxi.jpg" height="300" width="360" alt="taxi-marketing">
-                        <div class="port-service1">
+                        <div class="port-service-element">
                             <h3 class="under-section-title">Taxi Service</h3>
                             <p class="under-section-text">Marketing</p>
                         </div>
                     </li>
                     <li class="port-service">
                         <img src="./images/port-illustration.jpg" height="300" width="360" alt="screen-design">
-                        <div class="port-service1">
+                        <div class="port-service-element">
                             <h3 class="under-section-title">Screen Illustrations</h3>
                             <p class="under-section-text">Design</p>
                         </div>
                     </li>
                     <li class="port-service">
                         <img src="./images/port-courses.jpg" height="300" width="360" alt="courses-marketing">
-                        <div class="port-service1">
+                        <div class="port-service-element">
                             <h3 class="under-section-title">Online Courses</h3>
                             <p class="under-section-text">Marketing</p>
                         </div>
